Fix Alignment of button

--- a/homestyle.css
+++ b/homestyle.css
@@ -148,11 +148,11 @@ nav ul li a.active {
     font-size: 1.1rem;
     border-radius: 5px;
     transition: background-color 0.3s;
-    margin-left: 30px;
+    margin: 10px;
 }
 
 .special-container .btn:hover{
-    background-color: #92e7ea;
+    background-color: #59cdd1;
 }
 
 .service {
